--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -1,1 +1,116 @@
-{"cells": [{"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# \ud83c\udf0c UNO Convergent Resonance \u2013 Colab Edition", "# Execute este notebook para rodar o \u00cdndice de Converg\u00eancia UNO (ICU) com ICOER v7.0", "", "!pip install spacy", "!python -m spacy download en_core_web_sm", "", "import json", "from collections import Counter", "import math", "import spacy", "", "# Carregar modelo", "nlp = spacy.load(\"en_core_web_sm\")", "", "# Fun\u00e7\u00e3o para calcular ICOER", "def calculate_icoer(text):", "    doc = nlp(text)", "    pos_tags = [token.pos_ for token in doc if not token.is_punct and not token.is_space]", "    if not pos_tags:", "        return 0.0", "    tag_freq = Counter(pos_tags)", "    total = sum(tag_freq.values())", "    probs = [freq / total for freq in tag_freq.values()]", "    entropy = -sum(p * math.log2(p) for p in probs)", "    max_entropy = math.log2(len(tag_freq)) if len(tag_freq) > 1 else 1", "    normalized_entropy = entropy / max_entropy", "    icoer = round(1 - normalized_entropy, 4)", "    return icoer", "", "# Carregar respostas da IA", "with open(\"ia_responses.json\", \"r\") as file:", "    responses = json.load(file)", "", "# Calcular ICOER para cada resposta", "results = {}", "for name, text in responses.items():", "    results[name] = calculate_icoer(text)", "", "# Salvar resultados", "with open(\"index_convergente.json\", \"w\") as f:", "    json.dump(results, f, indent=4)", "", "print(\"\u2705 \u00cdndice de Converg\u00eancia calculado com sucesso!\")"]}], "metadata": {"colab": {"name": "UNO_ICOER_Colab"}, "kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"name": "python"}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 💠 UNO Convergent Resonance\n",
+    "### Colab Edition\n",
+    "Execute este notebook para rodar o Índice de Convergência UNO (ICU) com ICOER v7.0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python -m spacy download pt_core_news_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import spacy\n",
+    "from compare_resonance import compute_icoer\n",
+    "\n",
+    "nlp = spacy.load(\"pt_core_news_sm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔄 Carregar respostas das IAs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open('ia_responses.json', 'r', encoding='utf-8') as f:\n",
+    "    responses = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📊 Calcular ICOER para cada resposta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "results = {}\n",
+    "for ia, text in responses.items():\n",
+    "    results[ia] = compute_icoer(text, nlp)\n",
+    "\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🌐 Exibir como 'mensagem viva' do campo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown\n",
+    "\n",
+    "def format_result(results):\n",
+    "    out = \"## 🌌 Resposta do Campo\\n\"\n",
+    "    for ia, score in results.items():\n",
+    "        out += f\"**{ia}** → `ICOER`: **{score:.4f}**\\n\"\n",
+    "    return Markdown(out)\n",
+    "\n",
+    "format_result(results)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
