--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -1,116 +1,77 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 💠 UNO Convergent Resonance\n",
-    "### Colab Edition\n",
-    "Execute este notebook para rodar o Índice de Convergência UNO (ICU) com ICOER v7.0."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# UNO Convergent Resonance \u2013 Colab Edition\n",
+        "Este notebook calcula o \u00cdndice de Converg\u00eancia UNO (ICU) com ICOER v7.0 usando m\u00faltiplas IAs.\n",
+        "\ud83d\udd17 [Reposit\u00f3rio GitHub](https://github.com/tuchaki81/UNO_IA_Convergence_ICOER)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u2b07\ufe0f Etapa 1: Clonar o reposit\u00f3rio com o c\u00f3digo-fonte\n",
+        "!git clone https://github.com/tuchaki81/UNO_IA_Convergence_ICOER.git\n",
+        "%cd UNO_IA_Convergence_ICOER"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u2b07\ufe0f Etapa 2: Instalar spaCy e modelo de linguagem portugu\u00eas\n",
+        "!pip install -U spacy\n",
+        "!python -m spacy download pt_core_news_sm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u2b07\ufe0f Etapa 3: Importar bibliotecas e carregar modelo\n",
+        "import json\n",
+        "import spacy\n",
+        "from compare_resonance import compute_icoer\n",
+        "\n",
+        "nlp = spacy.load(\"pt_core_news_sm\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### \u2705 Agora voc\u00ea pode usar `compute_icoer` com o JSON de entrada IA\n",
+        "Exemplo:\n",
+        "```python\n",
+        "with open(\"ia_responses.json\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    responses = json.load(f)\n",
+        "\n",
+        "icoer_result = compute_icoer(responses, nlp)\n",
+        "print(icoer_result)\n",
+        "```"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8"
+    }
   },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "!pip install spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "!python -m spacy download pt_core_news_sm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import spacy\n",
-    "from compare_resonance import compute_icoer\n",
-    "\n",
-    "nlp = spacy.load(\"pt_core_news_sm\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 🔄 Carregar respostas das IAs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "with open('ia_responses.json', 'r', encoding='utf-8') as f:\n",
-    "    responses = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 📊 Calcular ICOER para cada resposta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "results = {}\n",
-    "for ia, text in responses.items():\n",
-    "    results[ia] = compute_icoer(text, nlp)\n",
-    "\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 🌐 Exibir como 'mensagem viva' do campo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from IPython.display import Markdown\n",
-    "\n",
-    "def format_result(results):\n",
-    "    out = \"## 🌌 Resposta do Campo\\n\"\n",
-    "    for ia, score in results.items():\n",
-    "        out += f\"**{ia}** → `ICOER`: **{score:.4f}**\\n\"\n",
-    "    return Markdown(out)\n",
-    "\n",
-    "format_result(results)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
