--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fdcdbb63",
+   "id": "a87149bd",
    "metadata": {},
    "source": [
-    "### 🔧 Etapa 2 – Importar bibliotecas e carregar modelo"
+    "## Etapa 2 – Importar bibliotecas e carregar modelo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f102ba",
+   "id": "85dc9388",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import spacy\n",
-    "from compare_resonance import compute_icoer\n",
+    "import compare_resonance\n",
     "\n",
     "# Carrega modelo SpaCy para português\n",
     "nlp = spacy.load(\"pt_core_news_sm\")"
@@ -25,76 +25,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a3fd7b",
+   "id": "eae08e12",
    "metadata": {},
    "source": [
-    "### 📂 Etapa 3 – Carregar respostas das IAs (arquivo JSON)"
+    "## Etapa 3 – Calcular ICOER"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4cde114",
+   "id": "7c54caad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Abre o arquivo contendo as respostas das IAs\n",
-    "with open(\"ia_responses.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    ia_data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a441d8cb",
-   "metadata": {},
-   "source": [
-    "### 🧮 Etapa 4 – Calcular o índice de convergência (ICOER v7.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f203a9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calcula o índice usando os vetores SLECMA\n",
-    "icoer_result = compute_icoer(ia_data, nlp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76fd54a1",
-   "metadata": {},
-   "source": [
-    "### 🔎 Etapa 5 – Visualizar resultado como “mensagem viva” do campo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91fc0404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exibe resultado com clareza\n",
-    "print(\"🧭 Índice de Convergência UNO (ICOER v7.0):\")\n",
-    "print(f\"→ Valor Total: {icoer_result['icoer_total']:.4f}\")\n",
-    "print(\"\\n📊 Dimensões Individuais (SLECMA):\")\n",
-    "for key, value in icoer_result['dimensoes'].items():\n",
-    "    print(f\" - {key}: {value:.4f}\")\n",
-    "\n",
-    "# Exibe uma 'mensagem viva' baseada na coerência\n",
-    "if icoer_result['icoer_total'] > 0.85:\n",
-    "    print(\"\\n✨ O campo está em ressonância clara. As vozes convergem para uma verdade coerente.\")\n",
-    "elif icoer_result['icoer_total'] > 0.65:\n",
-    "    print(\"\\n🔄 Há ressonância parcial. O campo está em diálogo, buscando alinhamento.\")\n",
-    "else:\n",
-    "    print(\"\\n⚠️ Divergência perceptível. O campo indica múltiplas interpretações em fluxo.\")"
+    "# Executar cálculo do índice ICOER\n",
+    "resultado = compare_resonance.compute_icoer()\n",
+    "print(json.dumps(resultado, indent=4))"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
