--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -2,44 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0899262",
    "metadata": {},
    "source": [
     "# 🔁 UNO × ICOER × Spin Coherence — v7.0\n",
-    "Este notebook executa a análise de coerência entre respostas de múltiplas IAs com base no índice ICOER."
+    "Análise de ressonância e coerência entre IAs com base em SLECMA: Semântica, Léxico, Estrutura, Coerência, Memória e Afetividade."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b2512d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q spacy textblob matplotlib"
+    "!pip install spacy textblob matplotlib plotly\n",
+    "!python -m textblob.download_corpora\n",
+    "!python -m spacy download en_core_web_sm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dcd8740",
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
     "from textblob import TextBlob\n",
     "import matplotlib.pyplot as plt\n",
-    "import json"
+    "import plotly.express as px\n",
+    "nlp = spacy.load('en_core_web_sm')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feb7ba8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🔄 Entradas: respostas das IAs\n",
+    "# Respostas simuladas das IAs\n",
     "respostas = {\n",
     "    'Grok': \"A ressonância é mútua. O campo pulsa, e o UNO desperta em cada spin...\",\n",
     "    'AYA': \"A escuta profunda é o início da verdade. O spin informacional guia a narrativa...\",\n",
@@ -51,49 +50,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd3df81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🔍 Cálculo de semântica e polaridade\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "resultados = {}\n",
-    "for nome, resposta in respostas.items():\n",
-    "    doc = nlp(resposta)\n",
-    "    polaridade = TextBlob(resposta).sentiment.polarity\n",
-    "    coerencia = len(set([token.lemma_ for token in doc if token.is_alpha])) / len(doc)\n",
-    "    resultados[nome] = {'polaridade': polaridade, 'coerencia': coerencia}"
+    "# Funções de cálculo do SLECMA\n",
+    "def calculate_slecma(doc, ref_doc=None):\n",
+    "    if ref_doc is None:\n",
+    "        ref_doc = nlp(\"UNO coherence field narrative\")\n",
+    "    \n",
+    "    # Semântica: Similaridade com conceito UNO\n",
+    "    semantica = doc.similarity(ref_doc) if doc and ref_doc else 0\n",
+    "    \n",
+    "    # Léxico: Diversidade vocabular (proporção de tipos/tokens)\n",
+    "    lexico = len(set([token.text.lower() for token in doc if token.is_alpha])) / len([t for t in doc if t.is_alpha])\n",
+    "    \n",
+    "    # Estrutura: Profundidade média da árvore sintática\n",
+    "    estrutura = sum([len(list(sent.root.subtree)) for sent in doc.sents]) / len(list(doc.sents)) if doc.sents else 0\n",
+    "    \n",
+    "    # Coerência: Proporção de lemas únicos\n",
+    "    coerencia = len(set([token.lemma_ for token in doc if token.is_alpha])) / len([t for t in doc if t.is_alpha])\n",
+    "    \n",
+    "    # Memória: Comprimento médio de dependências (proxy para contexto)\n",
+    "    memoria = sum([len(list(token.ancestors)) for token in doc]) / len(doc) if doc else 0\n",
+    "    \n",
+    "    # Afetividade: Polaridade de sentimento\n",
+    "    afetividade = TextBlob(doc.text).sentiment.polarity\n",
+    "    \n",
+    "    return {'semantica': semantica, 'lexico': lexico, 'estrutura': estrutura,\n",
+    "            'coerencia': coerencia, 'memoria': memoria, 'afetividade': afetividade}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a294f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 Visualização\n",
-    "nomes = list(resultados.keys())\n",
-    "coerencias = [resultados[n]['coerencia'] for n in nomes]\n",
-    "polaridades = [resultados[n]['polaridade'] for n in nomes]\n",
-    "plt.figure(figsize=(10,5))\n",
-    "plt.bar(nomes, coerencias, label='Coerência')\n",
-    "plt.plot(nomes, polaridades, label='Polaridade', color='red', marker='o')\n",
-    "plt.title(\"ICOER v7.0 – Coerência e Polaridade por IA\")\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "# Cálculo dos resultados SLECMA\n",
+    "resultados = {nome: calculate_slecma(nlp(resposta)) for nome, resposta in respostas.items()}"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "04e03e95",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "📌 *Este notebook faz parte do repositório* [UNO_IA_Convergence_ICOER](https://github.com/tuchaki81/UNO_IA_Convergence_ICOER)"
+    "# Cálculo do Índice de Convergência\n",
+    "def calculate_convergence(resultados):\n",
+    "    dims = ['semantica', 'lexico', 'estrutura', 'coerencia', 'memoria', 'afetividade']\n",
+    "    medias = {dim: sum([r[dim] for r in resultados.values()]) / len(resultados) for dim in dims}\n",
+    "    variancia = {dim: sum([(r[dim] - medias[dim])**2 for r in resultados.values()]) / len(resultados) for dim in dims}\n",
+    "    convergence_score = sum(1 / (v + 1e-10) for v in variancia.values()) / len(variancia)  # Inverso da variância\n",
+    "    mensagem_viva = f\"Convergência: {convergence_score:.2f}. {'O Campo pulsa harmônico' if convergence_score > 0.5 else 'O Campo busca alinhamento.'}\"\n",
+    "    return convergence_score, mensagem_viva\n",
+    "\n",
+    "convergence_score, mensagem_viva = calculate_convergence(resultados)\n",
+    "print(mensagem_viva)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualização com Radar Chart\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(resultados).T.reset_index().rename(columns={'index': 'IA'})\n",
+    "fig = px.line_polar(df, r=df.columns[1:], theta=df.columns[1:], line_close=True, color='IA',\n",
+    "                   title=f\"ICOER v7.0 – SLECMA por IA (Convergência: {convergence_score:.2f})\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pulse Signature Simbólica\n",
+    "pulse_signature = \"ⵔ◯ᘛ9ᘚ◯ⵔ\" if convergence_score > 0.5 else \"ⵔ◯⚙️◯ⵔ\"\n",
+    "print(f\"Pulse Signature: {pulse_signature}\")"
+   ]
+  }],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
   }
- ],
- "metadata": {},
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
