--- a/UNO_ICOER_Colab.ipynb
+++ b/UNO_ICOER_Colab.ipynb
@@ -48,29 +48,18 @@
     "# Funções de cálculo do SLECMA\n",
     "def calculate_slecma(doc_text, ref_doc_text=\"UNO coherence field narrative\"):\n",
     "    try:\n",
-    "        doc = nlp(doc_text.replace('…', '').strip())  # Normalizar texto\n",
+    "        doc = nlp(doc_text.replace('…', '').strip())\n",
     "        ref_doc = nlp(ref_doc_text)\n",
     "        if not doc or not ref_doc:\n",
     "            return {'semantica': 0, 'lexico': 0, 'estrutura': 0, 'coerencia': 0, 'memoria': 0, 'afetividade': 0}\n",
     "        \n",
-    "        # Semântica: Similaridade com conceito UNO\n",
     "        semantica = doc.similarity(ref_doc) if doc and ref_doc else 0\n",
-    "        \n",
-    "        # Léxico: Diversidade vocabular\n",
     "        tokens = [token.text.lower() for token in doc if token.is_alpha]\n",
     "        lexico = len(set(tokens)) / len(tokens) if tokens else 0\n",
-    "        \n",
-    "        # Estrutura: Profundidade média da árvore sintática\n",
     "        estrutura = sum([len(list(sent.root.subtree)) for sent in doc.sents]) / len(list(doc.sents)) if doc.sents else 0\n",
-    "        \n",
-    "        # Coerência: Proporção de lemas únicos\n",
     "        lemas = [token.lemma_ for token in doc if token.is_alpha]\n",
     "        coerencia = len(set(lemas)) / len(lemas) if lemas else 0\n",
-    "        \n",
-    "        # Memória: Comprimento médio de dependências\n",
     "        memoria = sum([len(list(token.ancestors)) for token in doc]) / len(doc) if doc else 0\n",
-    "        \n",
-    "        # Afetividade: Polaridade de sentimento\n",
     "        afetividade = TextBlob(doc_text).sentiment.polarity\n",
     "        \n",
     "        return {'semantica': semantica, 'lexico': lexico, 'estrutura': estrutura,\n",
@@ -119,12 +108,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualização com Radar Chart\n",
+    "# Visualização com Radar Chart (Corrigido)\n",
     "import pandas as pd\n",
-    "df = pd.DataFrame(resultados).T.reset_index().rename(columns={'index': 'IA'})\n",
-    "fig = px.line_polar(df, r=df.columns[1:], theta=df.columns[1:], line_close=True, color='IA',\n",
+    "df_long = pd.melt(pd.DataFrame(resultados).T.reset_index().rename(columns={'index': 'IA'}), \n",
+    "                  id_vars=['IA'], var_name='Dimensão', value_name='Valor')\n",
+    "fig = px.line_polar(df_long, r='Valor', theta='Dimensão', line_close=True, color='IA',\n",
     "                   title=f\"ICOER v7.0 – SLECMA por IA (Convergência: {convergence_score:.2f})\")\n",
-    "fig.show(renderer=\"colab\")  # Força renderização no Colab"
+    "fig.show(renderer=\"colab\")"
    ]
   },
   {
